--- a/templates/recipe_view.html
+++ b/templates/recipe_view.html
@@ -46,7 +46,7 @@
                 {% if submitter %}
                 <div style="padding: 2px 0; font-size: 0.85em; margin-bottom: 0.5rem;">
                     <div class="text-muted">
-                        <strong>By:</strong> {{ submitter.display_name or submitter.username }}
+                        <strong>Submitted By:</strong> {{ submitter.display_name or submitter.username }}
                     </div>
                 </div>
                 {% endif %}
