--- a/templates/recipe_form.html
+++ b/templates/recipe_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_mysql.html" %}
 
 {% block title %}{% if recipe %}Edit {{ recipe.name }}{% else %}New Recipe{% endif %} - Recipe Editor{% endblock %}
 
