--- a/templates/base_mysql.html
+++ b/templates/base_mysql.html
@@ -29,32 +29,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <!-- Search Bar -->
-                <form class="d-flex mx-auto my-2 my-lg-0" method="GET" action="{{ url_for('recipe_list') }}" style="max-width: 400px; width: 100%;">
-                    <div class="input-group">
-                        <input type="text" class="form-control" name="search" id="navbarSearchInput" 
-                               placeholder="Search recipes..." 
-                               value="{{ request.args.get('search', '') }}"
-                               aria-label="Search recipes">
-                        {% if request.args.get('search') %}
-                        <button class="btn btn-outline-light" type="button" id="clearSearchBtn" title="Clear search">
-                            <i class="bi bi-x-lg"></i>
-                        </button>
-                        {% endif %}
-                        <button class="btn btn-outline-light" type="submit" title="Search">
-                            <i class="bi bi-search"></i>
-                        </button>
-                    </div>
-                    <!-- Preserve tag filters when searching -->
-                    {% for tag in request.args.getlist('tags') %}
-                    <input type="hidden" name="tags" value="{{ tag }}">
-                    {% endfor %}
-                    {% if request.args.get('match_all') %}
-                    <input type="hidden" name="match_all" value="{{ request.args.get('match_all') }}">
-                    {% endif %}
-                </form>
-                
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav navbar-nav-spread">
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'recipe_list' %}active{% endif %}" 
@@ -190,6 +165,33 @@
                         </li>
                     {% endif %}
                 </ul>
+                
+                <!-- Search Bar - on new line -->
+                <div class="w-100 d-flex justify-content-end">
+                    <form class="d-flex my-2 my-lg-0" method="GET" action="{{ url_for('recipe_list') }}" style="max-width: 400px; width: 100%;">
+                        <div class="input-group">
+                            <input type="text" class="form-control" name="search" id="navbarSearchInput" 
+                                   placeholder="Search recipes..." 
+                                   value="{{ request.args.get('search', '') }}"
+                                   aria-label="Search recipes">
+                            {% if request.args.get('search') %}
+                            <button class="btn btn-outline-light" type="button" id="clearSearchBtn" title="Clear search">
+                                <i class="bi bi-x-lg"></i>
+                            </button>
+                            {% endif %}
+                            <button class="btn btn-outline-light" type="submit" title="Search">
+                                <i class="bi bi-search"></i>
+                            </button>
+                        </div>
+                        <!-- Preserve tag filters when searching -->
+                        {% for tag in request.args.getlist('tags') %}
+                        <input type="hidden" name="tags" value="{{ tag }}">
+                        {% endfor %}
+                        {% if request.args.get('match_all') %}
+                        <input type="hidden" name="match_all" value="{{ request.args.get('match_all') }}">
+                        {% endif %}
+                    </form>
+                </div>
             </div>
         </div>
     </nav>
